name:                courrier-jp-atom
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/shotarok/courrier-jp-atom#readme
license:             MIT
license-file:        LICENSE
author:              Shotaro Kohama
maintainer:          khmshtr28@gmail.com
copyright:           2017 Shotaro Kohama
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CourrierJP
  build-depends:       base
                     , feed
                     , xml
                     , scalpel
  default-language:    Haskell2010

executable courrier-jp-atom-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , courrier-jp-atom
                     , amazonka
                     , amazonka-s3
                     , lens
                     , text
  default-language:    Haskell2010

test-suite atom-courrier-jp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , courrier-jp-atom
                     , HUnit
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shotarok/courrier-jp-atom
